fix textbox out of bounds on some devices

--- a/newstyle.css
+++ b/newstyle.css
@@ -11,6 +11,14 @@ body {
 	text-align: center;
 }
 
+textarea{
+    height: 100%;
+    width: 100%;
+   -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+    box-sizing: border-box;         /* Opera/IE 8+ */
+}
+
 #controls {
 	/* width: 776px; goodbye funny joke */
 	width: 100vw;
